@startuml
class Controller{
    responsible for the game loop.
    highest layer and master of system.
    asks input layer for input.

    passes mouse button down coordinates to model.
    Model should not know x y coordinates
}

class Model{
    holds ,color, data, grid, paintings, state
    Holds location data for visitors

    Holds menu structure data.
    Holds screen state data (is menu active or museum).

    Model hanldes click events based on received x,y coordinates.
}

class View{
    View gets render elements from controller
    View is able to differentiate between rectangles and text elements.
    View renders rectangles in a differenet manner than text elements.
    View may know about the model
    Menu is a view component
}

class Input{
    Input layer retrieves user input from OS or sdl
    Input layer returns x,y coordinates on mouse button down.

}

Controller *-- Model : updates > 
Controller *-- View : sends data >
Controller *-- Input : asks for >

@enduml
